--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -110,15 +110,20 @@ main {
 .inicio {
     height: 90vh;
     display: flex;
+    justify-content: flex-start;
     align-items: center;
-    position: relative;
     background-image: url(../Imagens/fundo.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100vw 90vh;
+}
+.inicio-item {
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .inicio-texto {
-    width: 40%;
+    width: 45%;
     padding-left: 60px;
     background: black;
     height: 100%;
@@ -130,7 +135,7 @@ main {
 }
 
 .inicio-imagem {
-    width: 65%;
+    width: 60%;
     height: 100%;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 1) 2%, rgba(0, 0, 0, 0) 100%);
 }
@@ -143,7 +148,7 @@ main {
     text-align: left;
 }
 
-.a {
+.botao-entrar {
     margin-left: 0;
     width: 100%;
 }
@@ -151,7 +156,7 @@ main {
     padding: 10px;
     width: 35%;
     color: #00a6e7;
-    font-size: 22px;
+    font-size: 100%;
     background: black;
     border: 1px solid #00a6e7;
     border-radius: 5px;
@@ -169,12 +174,12 @@ main {
     padding-top: 80px;
     padding-bottom: 40px;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: flex-start;
+    align-items: center;
     flex-direction: column;
     gap: 10px;
-    max-width: 930px;
-    margin: auto;
+    width: 70%;
+    margin: 0 auto;
 }
 
 h1 {
@@ -187,21 +192,22 @@ h1 {
 
 
 .jogos-home {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 29px;
     flex-wrap: wrap;
 }
 
 .jogo {
-    height: 400px;
+    width: 30%;
     background: #001d38;
     box-shadow: 3px 3px 5px black;
 }
 
 .jogo img {
-    height: 360px;
+    width: 100%;
 }
 
 .jogo img:hover {
@@ -258,7 +264,15 @@ legend {
 }
 
 .jogos-lancamento iframe {
-    height: 420px;
+    height: 100%;
+    width: 80%;
+}
+
+.itens-jogos-lancamento {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .imagens-jogos-lancamento {
@@ -311,16 +325,22 @@ legend {
 
 .span-oferta {
     display: flex;
+    padding: 50px 5px;
     justify-content: center;
     align-items: center;
-    height: 150px;
+    flex-direction: column;
+    height: 100%;
     background: linear-gradient(to right, #00a6e7, rgb(167, 0, 139));
-    max-width: 930px;
+    width: 70%;
     margin: auto;
-    font-size: 32px;
+    font-size: 30px;
     font-weight: bold;
     text-shadow: 2px 2px 3px purple;
     box-shadow: 2px 2px 7px 3px rgb(12, 12, 12);
+}
+
+.span-oferta p {
+    text-align: center;
 }
 
 .span-oferta:hover {
@@ -330,10 +350,10 @@ legend {
 .promocoes {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 8px;
+    gap: 10px;
 }
 
 .jogo-promocoes {
@@ -362,17 +382,188 @@ legend {
 }
 
 .desconto {
-    color: rgb(51, 180, 0);
-    background: rgb(8, 82, 8);
+    color: #fff;
+    background: #006fd6;
+    font-weight: 600;
     font-size: 14px;
     padding: 2px;
     border-radius: 5px;
 }
 
 .promocao {
-    color: rgb(0, 175, 0);
+    color: #fff;
     width: 160px;
 }
 
+.gratuitos {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.jogoGratis {
+    height: 300px;
+    width: 210px;
+}
+
+.jogoGratis img {
+    height: 280px;
+    width: 210px;
+    border-radius: 5px;
+}
+
+.jogoGratis img:hover {
+    cursor: pointer;
+    border: 2px solid #006fd6;
+    transform: scale(1.03);
+    transition: 0.3s;
+}
+
+footer {
+    height: 100%;
+    width: 100%;
+    background: #001427;
+}
+
+.footer {
+    width: 100%;
+    height: 250px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.item-footer {
+    padding-left: 250px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+@media (max-width: 1328px) {
+    .container, .span-oferta {
+        width: 80%;
+    }
+}
+
+@media (max-width: 1167px) {
+    .container, .span-oferta {
+        width: 90%;
+    }
+}
+
+@media (max-width: 1034px) {
+    nav {
+        justify-content: space-around;
+    }
+    .nav-menu-esq {
+        display: none;
+    }  
+    .inicio {
+        background-image: url(../Imagens/fundo-responsivo.jpg);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .inicio-item {
+        z-index: 1;
+        background: rgba(0, 0, 0, 0.7);
+        background-image: linear-gradient(
+            to top,
+            rgba(0, 0, 0, 0.8) 0,
+            rgba(0, 0, 0, 0) 90%,
+            rgba(0, 0, 0, 0.8) 100%
+        );
+        height: 100%;
+        width: 100%;
+    }
+    .inicio-texto {
+        padding: 0;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: none;
+        width: 60%;
+    }
+    .inicio-texto h1 {
+        text-align: center;
+    }
+    .inicio-imagem {
+        display: none;
+    }
+    .botao-entrar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .iniciarSessao {
+        color: white;
+        cursor: pointer;
+        border: none;
+        background: linear-gradient(to top, rgb(0, 70, 150) 2%, rgb(0, 145, 194) 100%);
+        width: 50%;
+    } 
+}
+
+@media (max-width: 1000px) {
+    .jogos-lancamento {
+        flex-direction: column;
+        height: 100%;
+    }
+    .jogos-lancamento iframe {
+        height: 70vh;
+        width: 100%;
+    }
+    .itens-jogos-lancamento {
+        flex-direction: row;
+    }
+    .imagens-jogos-lancamento {
+        flex-direction: row;
+    }
+    .itens-jogos-lancamento {
+        width: 100%;
+    }
+    .imagens-jogos-lancamento img {
+        height: 200px;
+    }
+    .comprar-jogos-lancamento {
+        padding: 0;
+        gap: 20px;
+        flex-direction: column;
+    }
+
+}
+
+@media (max-width: 820px) {
+    .itens-jogos-lancamento {
+        flex-direction: column;
+    }
+    .imagens-jogos-lancamento {
+        flex-direction: column;
+        width: 100%;
+    }
+    .imagens-jogos-lancamento img{
+        height: 80%;
+        width: 100%;
+    }
+    .comprar-jogos-lancamento {
+        flex-direction: row;
+    }
+}
+
+@media (max-width: 650px) {
+    .jogo {
+        width: 250px;
+    }
+    .legenda-jogo-mais-vendido {
+        padding-bottom: 8px;
+    }
+    .jogos-lancamento iframe {
+        height: 300px;
+    }
+}
 
 
