--- a/Estilo/style.css
+++ b/Estilo/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     color: white;
     scroll-behavior: smooth;
 }
@@ -221,6 +224,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-bottom: 8px;
 }
 
 legend {
@@ -356,6 +360,10 @@ legend {
     gap: 10px;
 }
 
+.contador {
+    height: 10px;
+    width: 50%;
+}
 .jogo-promocoes {
     height: 175px;
     width: 225px;
@@ -426,13 +434,21 @@ footer {
     background: #001427;
 }
 
-.footer {
+footer, .footer {
     width: 100%;
-    height: 250px;
+    height: 15vh;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    gap: 60px;
+    padding: 3px;
+
+}
+
+h3:hover {
+    cursor: pointer;
+    border-bottom: 1px solid #fff;
 }
 
 .item-footer {
@@ -509,6 +525,9 @@ footer {
 }
 
 @media (max-width: 1000px) {
+    .titulo {
+        font-size: 50px;
+    }
     .jogos-lancamento {
         flex-direction: column;
         height: 100%;
@@ -538,6 +557,9 @@ footer {
 }
 
 @media (max-width: 820px) {
+    .titulo {
+        font-size: 40px;
+    }
     .itens-jogos-lancamento {
         flex-direction: column;
     }
@@ -552,6 +574,18 @@ footer {
     .comprar-jogos-lancamento {
         flex-direction: row;
     }
+    .comprar-jogos-lancamento p {
+        font-size: 15px;
+    }
+    footer, .footer {
+        height: 100%;
+        flex-direction: column;
+        gap: 20px;
+        padding: 20px 0px;
+    }
+    h3 {
+        font-size: 18px;
+    }
 }
 
 @media (max-width: 650px) {
@@ -563,6 +597,25 @@ footer {
     }
     .jogos-lancamento iframe {
         height: 300px;
+    }
+}
+
+@media (max-width: 588px) {
+    .titulo {
+        font-size: 30px;
+    }
+    .jogo {
+        width: 45%;
+    }
+    .legenda-jogo-mais-vendido p {
+        font-size: 5px;
+    }
+}
+
+@media (max-width: 460px) {
+    legend {
+        font-size: 0.8rem;
+        width: 45%;
     }
 }
 
